--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <title> Youtube by isaac</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/video.css">
